--- a/ja/suite/chrome/common/help/cs_nav_prefs_navigator.xhtml
+++ b/ja/suite/chrome/common/help/cs_nav_prefs_navigator.xhtml
@@ -145,7 +145,7 @@
 
 <ol>
   <li>Open the <span class="mac">&brandShortName;</span>
-    <span class="noMac">Edit</span>menu and choose Preferences.</li>
+    <span class="noMac">Edit</span> menu and choose Preferences.</li>
   <li>Under the Browser category, click History. (If no subcategories are
     visible, double-click Browser to expand the list.)</li>
 </ol>
@@ -428,26 +428,22 @@
     <ul>
       <li><strong>Search using</strong>: Use the drop-down list to select the
         search engine you want use for web searching.</li>
+      <li><strong>Manage Search Engines</strong>: Click this to open a dialog
+        where you can manage the search engines list. In this dialog you can
+        also select <strong>Show search suggestions</strong> to have
+        &brandShortName; show suggestions from the search engine as you type a
+        search string in the Sidebar search tab or in the Search Bar.</li>
     </ul>
   </li>
   <li><strong>Search Results</strong>:
     <ul>
-      <li><strong>Open the Search tab in the Sidebar when search results are
-        available</strong>: Select this to have &brandShortName; open the
-        Sidebar and show your search results.</li>
-      <li><strong>Open tab instead of window for a context menu web
+      <li><strong>Open new tabs for sidebar search results</strong>: Select this
+        to have &brandShortName; show your search results in a new tab rather
+        than in the current one when you search using the sidebar.</li>
+      <li><strong>Open a tab instead of a window for a context menu web
         search</strong>: Select this to have &brandShortName; show your search
         results in a new tab rather than a new window when you search on
         selected words in a web page.</li>
-    </ul>
-  </li>
-  <li><strong>Sidebar Search Tab Preference</strong>:
-    <ul>
-      <li><strong>Basic</strong>: Choose this to use one search engine when
-        searching in &brandShortName;.</li>
-      <li><strong>Advanced</strong>: <strong></strong>Choose this to select one
-        or more search engines from a list when searching in
-        &brandShortName;.</li>
     </ul>
   </li>
 </ul>
