--- a/ja-JP-mac/suite/chrome/common/help/certs_help.xhtml
+++ b/ja-JP-mac/suite/chrome/common/help/certs_help.xhtml
@@ -237,7 +237,7 @@
 
 <p>To ensure that an entire
   <a href="glossary.xhtml#certificate_chain">certificate chain</a> of CAs are
-  all trusted, you need to edit the root CA certifiate only.</p>
+  all trusted, you need to edit the root CA certificate only.</p>
 
 <p>To import the chain, you click a link on a web page provided by the CA. You
   can then use the authorities tab to locate the root certificate and edit its
@@ -342,11 +342,7 @@
   button:</p>
 
 <ul>
-  <li><strong>Log In</strong>: Log into the selected security device. After you
-    have logged in to the device, the frequency with which you will be asked to
-    enter the master password for the device depends on the
-    <a href="passwords_help.xhtml#master_password_timeout">Master Password
-    Timeout</a> settings.</li>
+  <li><strong>Log In</strong>: Log into the selected security device.</li>
   <li><strong>Log Out</strong>: Log out of the selected security device. After
     you have logged out of the device, the device and the certificates it
     contains will not be available until you log in again.</li>
